@@ -22,10 +22,18 @@ package net.sourceforge.atunes.kernel.actions;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+import net.sourceforge.atunes.model.IApplicationArguments;
 import net.sourceforge.atunes.model.IRipperHandler;
 
+import org.junit.Assert;
 import org.junit.Test;
 
+/**
+ * Test of RipCdAction
+ * @author alex
+ *
+ */
 public class RipCDActionTest {
 
 	@Test
@@ -37,5 +45,41 @@ public class RipCDActionTest {
 		sut.executeAction();
 		
 		verify(ripperHandler).startCdRipper();
+	}
+	
+	@Test
+	public void testEnabled() {
+		RipCDAction sut = new RipCDAction();
+		IRipperHandler ripperHandler = mock(IRipperHandler.class);
+		when(ripperHandler.isRipSupported()).thenReturn(true);
+		IApplicationArguments arguments = mock(IApplicationArguments.class);
+		when(arguments.isSimulateCD()).thenReturn(false);
+		sut.setRipperHandler(ripperHandler);
+		sut.setApplicationArguments(arguments);
+		Assert.assertTrue(sut.isEnabled());
+	}
+
+	@Test
+	public void testEnabled2() {
+		RipCDAction sut = new RipCDAction();
+		IRipperHandler ripperHandler = mock(IRipperHandler.class);
+		when(ripperHandler.isRipSupported()).thenReturn(false);
+		IApplicationArguments arguments = mock(IApplicationArguments.class);
+		when(arguments.isSimulateCD()).thenReturn(true);
+		sut.setRipperHandler(ripperHandler);
+		sut.setApplicationArguments(arguments);
+		Assert.assertTrue(sut.isEnabled());
+	}
+	
+	@Test
+	public void testDisabled() {
+		RipCDAction sut = new RipCDAction();
+		IRipperHandler ripperHandler = mock(IRipperHandler.class);
+		when(ripperHandler.isRipSupported()).thenReturn(false);
+		IApplicationArguments arguments = mock(IApplicationArguments.class);
+		when(arguments.isSimulateCD()).thenReturn(false);
+		sut.setRipperHandler(ripperHandler);
+		sut.setApplicationArguments(arguments);
+		Assert.assertFalse(sut.isEnabled());
 	}
 }
